apply some changes

--- a/details.html
+++ b/details.html
@@ -49,7 +49,7 @@
       <div class="container">
         <h1>Anagrafica prodotti</h1>
         <h4>scopri qua i dettagli del prodotto che cercavi</h4>
-
+        <!-- qui vengono inseriti tutti i dettagli che compongono un prodotto -->
         <div class="row row-cols-1 row-cols-md-2 align-items-center">
           <div class="col">
             <div>
