--- a/backoffice.html
+++ b/backoffice.html
@@ -37,11 +37,12 @@
           </nav>
     </header>
     <main>
+        <!-- qui andiamo a creare quelllo che sara il nostro form per la creazione di nuove card -->
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <h2 class="mt-4">Backoffice</h2>
-                    <h4 class="my-3">Crea Prodotto</h4>
+                <div class="col-md-8 bg-body-tertiary mt-3">
+                    <h2 class="mt-4 text-center">Backoffice</h2>
+                    <h4 class="my-3 text-center">Crea un nuovo Prodotto</h4>
     
                     <form>
                         <div class="mb-3">
